@@ -192,6 +192,7 @@ Line  82: E Unbalanced close brace found
 
 Line  88: E Could not complete statement.
             One close brace would complete the first line
+            One close brace would complete at end of line 93.
             One close brace would complete the script body at line 94.
             Assuming completeness for further processing.
 Line  90: E Wrong number of arguments (1) to "if"
