@@ -1,3 +1,6 @@
+2011-04-19
+ Further processing to diagnose missing brace.
+
 2011-04-17
  Added -H command line switch.
 
